# tinygmm-thesis

./: .gitignore  README.md  best.ckpt  best_anomaly_model.ckpt  hello.py  pyproject.toml
checkpoints/har/: best.ckpt
checkpoints/speech/: best.ckpt
firmware/bench/: CMakeLists.txt  README.md  output.txt  sdkconfig  sdkconfig.defaults
firmware/bench/main/: CMakeLists.txt  config.h  cosine.c  cosine.h  gmm.c  gmm.h  knn.c  knn.h  main.c  prototype.c  prototype.h  small_ae.c  small_ae.h
results/: sweep_har_baseline_20260609_184638.parquet  sweep_har_baseline_latest.parquet  sweep_pendigits_baseline_20260609_185325.parquet  sweep_pendigits_baseline_20260621_205113.parquet  sweep_pendigits_baseline_latest.parquet  sweep_speech_baseline_latest.parquet  test_har.parquet  test_pendigits.parquet  test_speech.parquet
scripts/: train_har_extractor.sh  train_speech_extractor.sh
src/: compare.py  data.py  models.py  plot.ipynb  test_autoencoder.py  train_autoencoder.py  train_speech_extractor.py
src/analysis/: __init__.py  geometry.py
src/compare/: __init__.py  __main__.py  adapters.py  colors.py  export_baseline_sweeps.py  export_bench.py  export_extractor_curves.py  export_plots.py  export_resource.py  export_test_table.py  metrics.py  plots.ipynb  plots.py  sweep.py  test_eval.py
src/embeddings/: __init__.py  base.py  har.py  speech.py  tabular.py
src/lib/: __init__.py  data.py  models.py
src/misc/: __init__.py  gmm.ipynb  plot.ipynb  test_autoencoder.py
src/train/: __init__.py  autoencoder.py  har_extractor.py  speech_extractor.py
(+16 files in other folders)
