[project]
name = "tinygmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "pandas[parquet]>=3.0.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "tqdm>=4.67",
]
